--- a/src/style/header.css
+++ b/src/style/header.css
@@ -6,7 +6,7 @@
     display: flex;
     position: fixed;
     top: 0;
-    background-color: #4fa366;
+    background-color: #282525;
     z-index: 2;
   }
   
