--- a/src/style/header.css
+++ b/src/style/header.css
@@ -10,9 +10,11 @@
     background-color: #235733;
     z-index: 2;
   }
-  
+  .main-navigation h3{
+    font-weight: bold;
+  }
   .nav-logo {
-    width: 136%;
+    width: 150%;
     height: 3.8712rem;
     /* margin-top: 2px; */
     background-color: white;
@@ -38,42 +40,62 @@
   
   span {
     color: crimson;
+    font-weight: bold;
   }
   
   .nav-list {
-    width: 567%;
-    height: 60px;
+
+    width: 500%;
+    /* height: 60px; */
+    height: 3.8712rem;
+    margin-left: 0px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     /* background-color: burlywood; */
   }
-  
+  .search-bar{
+    width: 350%;
+    height:  3.1712rem;
+    /* background-color: #ffffff; */
+    display: flex;
+    padding-top: 15px;
+    
+  }
+  /* #sb{
+    margin-left: 25px
+  } */
   .nav-list a {
     text-transform: uppercase;
     text-decoration: none;
     color: #ffffff;
     font-size: 15px;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     padding: 20px;
+    margin-left: 20px;
     transition: all 0.5s ease-out;
   }
   
   .registration-sec{
-    width: 126%;
+    /* background-color: #e7e1e1; */
+    /* width: 200px; */
+    height: 3.8712rem;
+    width: 90%;
     height: 60px;
     display: flex;
     justify-content: right;
     align-items: center;
   }
   .registration-sec a{
+
+
     text-transform: uppercase;
     text-decoration: none;
     color: #ffffff;
     font-size: 15px;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     padding: 20px;
     transition: all 0.5s ease-out;
   }
@@ -83,4 +105,54 @@
   .nav-list a:hover {
     color: crimson;
   }
+  #menu-icon{
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none;
+  }
   
+ /* Default navbar styles */
+
+.main-navigation {
+  /* Default styles here */
+}
+
+/* Mobile styles */
+@media (max-width: 767px) {
+  .main-navigation {
+    /* Mobile styles here */
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    /* display: none; */
+  }
+  .main-navigation a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+}
+#menu-icon {
+  display: block;
+}
+
+
+}
+
+/* Tablet styles */
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-navigation {
+    /* Tablet styles here */
+  }
+}
+
+/* Desktop styles */
+@media (min-width: 992px) {
+  .main-navigation {
+    /* Desktop styles here */
+  }
+}
