--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,1 +1,13 @@
 
+#home-section {
+    width: 100%;
+    height: 75vh;
+    background-image: url("../pic3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: #232020b3;
+    background-blend-mode: darken;
+    z-index: 1;
+}
