--- a/src/style/about.css
+++ b/src/style/about.css
@@ -2,16 +2,16 @@
 .abt-main-div{
     width: 100%;
     height: 120vh;
-    background-color: rgb(74, 75, 75);
+    /* background-color: rgb(74, 75, 75); */
     padding-top: 50px;
 }
 .abt-content{
     width: 70%;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     margin: auto;
     padding-top: 5px;
-    border: 2px solid rgb(6, 6, 6);
+    /* border: 1px solid rgb(6, 6, 6); */
 }
 .abt-heading{
     width: 100%;
