--- a/src/style/about.css
+++ b/src/style/about.css
@@ -2,13 +2,13 @@
 .abt-main-div{
     width: 100%;
     height: 120vh;
-    /* background-color: rgb(74, 75, 75); */
+    background-color: rgb(74, 75, 75);
     padding-top: 50px;
 }
 .abt-content{
     width: 70%;
     height: 100vh;
-    /* background-color: rgb(255, 255, 255); */
+    background-color: rgb(255, 255, 255);
     margin: auto;
     padding-top: 5px;
     /* border: 1px solid rgb(6, 6, 6); */
@@ -16,7 +16,7 @@
 .abt-heading{
     width: 100%;
     height: 7vh;
-    /* background-color: aqua; */
+    /* background-color: rgb(48, 185, 10); */
     text-align: center;
 }
 .abt-writing{
