--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,28 +1,49 @@
 
 .abt-main-div{
     width: 100%;
-    height: 120vh;
+    height: 230vh;
     background-color: rgb(74, 75, 75);
     padding-top: 50px;
 }
 .abt-content{
     width: 70%;
-    height: 100vh;
+    height: 220vh;
     background-color: rgb(255, 255, 255);
     margin: auto;
     padding-top: 5px;
-    /* border: 1px solid rgb(6, 6, 6); */
+    border: 1px solid rgb(6, 6, 6);
 }
 .abt-heading{
     width: 100%;
     height: 7vh;
     /* background-color: rgb(48, 185, 10); */
     text-align: center;
+
+    
 }
+.abt-heading h1{
+    font-weight: bold;
+}
+
 .abt-writing{
     width: 98%;
-    height: 80vh;
+    height: 210vh;
     /* background-color: aqua; */
     margin: auto;
     padding-left: 10px;
+}
+
+.abt-writing p{
+    font-size: large;
+
+}
+
+.abt-writing p h5{
+    font-weight: bold;
+    text-decoration: underline;
+    /* font-size: larger; */
+
+}
+.abt-writing p h3{
+    font-weight: bold;
 }
